5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4171/executions/1646_2730.log
== TEST (2019-04-16 09:25:43) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x > 0:
	print("Superiores")
else:
	print("Inferiores")
-- OUTPUT:
Superiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 09:26:03) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x > 0:
	print("Superiores")
else:
	print("Inferiores")
-- EXECUTION TIME:
0.147638
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Superiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Inferiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:26:36) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x > 0:
	print("Superiores")
else:
	print("Inferiores")
-- OUTPUT:
Superiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:26:41) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x > 0:
	print("Superiores")
else:
	print("Inferiores")
-- OUTPUT:
Superiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:26:41) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x > 0:
	print("Superiores")
else:
	print("Inferiores")
-- OUTPUT:
Superiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:26:48) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x > 0:
	print("Superiores")
else:
	print("Inferiores")
-- OUTPUT:
Superiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 09:29:31) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x > 0 and y > 0:
	print("Superiores")
if x > 0 and y < 0:
	print("Superiores")
if x < 0 and y > 0:
	print("Inferiores")
if x < and y < 0:
	print("Inferiores")
-- EXECUTION TIME:
0.133087
-- ERROR:
  File "/home/codebench/codes/1646/2730/main.py", line 12
    if x < and y < 0:
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:29:32) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x > 0 and y > 0:
	print("Superiores")
if x > 0 and y < 0:
	print("Superiores")
if x < 0 and y > 0:
	print("Inferiores")
if x < and y < 0:
	print("Inferiores")
-- ERROR:
File "XXXX", line 12
    if x < and y < 0:
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:29:46) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x > 0 and y > 0:
	print("Superiores")
if x > 0 and y < 0:
	print("Superiores")
if x < 0 and y > 0:
	print("Inferiores")
if x < 0 and y < 0:
	print("Inferiores")
-- OUTPUT:
Superiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 09:29:50) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x > 0 and y > 0:
	print("Superiores")
if x > 0 and y < 0:
	print("Superiores")
if x < 0 and y > 0:
	print("Inferiores")
if x < 0 and y < 0:
	print("Inferiores")
-- EXECUTION TIME:
0.17493
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Superiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Inferiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:29:50) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x > 0 and y > 0:
	print("Superiores")
if x > 0 and y < 0:
	print("Superiores")
if x < 0 and y > 0:
	print("Inferiores")
if x < 0 and y < 0:
	print("Inferiores")
-- OUTPUT:
Superiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 09:30:12) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x > 0 and y > 0:
	print("Superior")
if x > 0 and y < 0:
	print("Superior")
if x < 0 and y > 0:
	print("Inferior")
if x < 0 and y < 0:
	print("Inferior")
-- EXECUTION TIME:
0.149997
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Superior
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superior
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Inferior
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:30:49) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x > 0 and y > 0: #Situado no Q1
	print("Superiores")
if x > 0 and y < 0: #Situado no Q2
	print("Superiores")
if x < 0 and y > 0: #Situado no Q3
	print("Inferiores")
if x < 0 and y < 0: #Sitaudo no Q4
	print("Inferiores")
-- OUTPUT:
Superiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 09:31:14) 
-- CODE:
x = float(input("x: "))
y = float(input("y: "))

if x > 0 and y > 0: #Situado no Q1
	print("Superiores")
if x > 0 and y < 0: #Situado no Q2
	print("Superiores")
if x < 0 and y > 0: #Situado no Q3
	print("Inferiores")
if x < 0 and y < 0: #Sitaudo no Q4
	print("Inferiores")
-- EXECUTION TIME:
0.146677
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Superiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Inferiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 09:31:42) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
else:
	print("Superiores")
-- EXECUTION TIME:
0.159592
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Superiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Inferiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:31:45) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
else:
	print("Superiores")
-- OUTPUT:
Superiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:31:54) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
else:
	print("Superiores")
-- OUTPUT:
Superiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:31:58) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
else:
	print("Superiores")
-- OUTPUT:
Superiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:32:02) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
else:
	print("Superiores")
-- OUTPUT:
Superiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 09:35:03) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = int(input("x: "))
y = int(input("y: "))

if x < 0:
	print("Inferiores")
else:
	print("Superiores")
-- EXECUTION TIME:
0.223167
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2730/main.py", line 3, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '4.5'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 09:35:04) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = int(input("x: "))
y = int(input("y: "))

if x < 0:
	print("Inferiores")
else:
	print("Superiores")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    x = int(input())
ValueError: invalid literal for int() with base 10: '4.5'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 16:43:28) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
else:
	print("Superiores")
-- EXECUTION TIME:
0.132733
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Superiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Inferiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 16:43:29) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
else:
	print("Superiores")
-- EXECUTION TIME:
0.132636
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Superiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Inferiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 16:43:30) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
else:
	print("Superiores")
-- OUTPUT:
Superiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-19 16:43:48) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
if x > 0:
	print("Superiores")
-- OUTPUT:
Superiores
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 16:43:50) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
if x > 0:
	print("Superiores")
-- EXECUTION TIME:
0.283695
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Superiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Inferiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 16:43:51) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
if x > 0:
	print("Superiores")
-- EXECUTION TIME:
0.195043
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Superiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Inferiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 16:43:51) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
if x > 0:
	print("Superiores")
-- EXECUTION TIME:
0.247393
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Superiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:

-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Inferiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 16:43:51) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
if x > 0:
	print("Superiores")
-- EXECUTION TIME:
0.0821671
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1646/2730/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 16:43:52) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
if x > 0:
	print("Superiores")
-- EXECUTION TIME:
0.128762
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Superiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Inferiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 16:43:52) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
if x > 0:
	print("Superiores")
-- EXECUTION TIME:
0.17345
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Inferiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Inferiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 16:43:52) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
if x > 0:
	print("Superiores")
-- EXECUTION TIME:
0.131718
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Inferiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Superiores
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 16:43:52) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
if x > 0:
	print("Superiores")
-- EXECUTION TIME:
0.159099
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Superiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Superiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 16:43:52) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
if x > 0:
	print("Superiores")
-- EXECUTION TIME:
0.189069
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Superiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Superiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 16:43:53) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
if x > 0:
	print("Superiores")
-- EXECUTION TIME:
0.23375
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1646/2730/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 16:43:55) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
if x > 0:
	print("Superiores")
-- EXECUTION TIME:
0.156725
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Superiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Inferiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 16:43:57) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
if x > 0:
	print("Superiores")
-- EXECUTION TIME:
0.163615
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Superiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Superiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 16:43:57) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
if x > 0:
	print("Superiores")
-- EXECUTION TIME:
0.106944
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Superiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Superiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 16:43:57) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
if x > 0:
	print("Superiores")
-- EXECUTION TIME:
0.102649
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Superiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Superiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 16:43:57) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
if x > 0:
	print("Superiores")
-- EXECUTION TIME:
0.13012
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Superiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Superiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 16:43:58) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
if x > 0:
	print("Superiores")
-- EXECUTION TIME:
0.184381
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Superiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Superiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 16:43:58) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
if x > 0:
	print("Superiores")
-- EXECUTION TIME:
0.140778
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Superiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Superiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 16:43:58) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
if x > 0:
	print("Superiores")
-- EXECUTION TIME:
0.106123
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1646/2730/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 16:43:59) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
if x > 0:
	print("Superiores")
-- EXECUTION TIME:
0.134913
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Superiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Inferiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 16:43:59) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
if x > 0:
	print("Superiores")
-- EXECUTION TIME:
0.158993
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Inferiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Superiores
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 16:43:59) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
if x > 0:
	print("Superiores")
-- EXECUTION TIME:
0.0871449
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1646/2730/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 16:43:59) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
if x > 0:
	print("Superiores")
-- EXECUTION TIME:
0.088939
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Superiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Inferiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 16:43:59) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
if x > 0:
	print("Superiores")
-- EXECUTION TIME:
0.116535
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Inferiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:

-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Superiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 16:44:00) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
if x > 0:
	print("Superiores")
-- EXECUTION TIME:
0.168744
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Superiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Inferiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 16:44:00) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
if x > 0:
	print("Superiores")
-- EXECUTION TIME:
0.11929
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Superiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Inferiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 16:44:25) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
if x > 0:
	print("Superiores")
-- EXECUTION TIME:
0.122512
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Superiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Inferiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 16:44:57) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
if x > 0:
	print("Superiores")
-- EXECUTION TIME:
0.135234
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Superiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Inferiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 16:44:58) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
if x > 0:
	print("Superiores")
-- EXECUTION TIME:
0.168842
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Superiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Inferiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 16:44:58) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
if x > 0:
	print("Superiores")
-- EXECUTION TIME:
0.123454
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Superiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Inferiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 16:44:59) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
if x > 0:
	print("Superiores")
-- EXECUTION TIME:
0.098341
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Superiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Superiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 16:44:59) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
if x > 0:
	print("Superiores")
-- EXECUTION TIME:
0.115923
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Superiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Inferiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 16:45:00) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
if x > 0:
	print("Superiores")
-- EXECUTION TIME:
0.111717
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Superiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Superiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 16:45:00) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
if x > 0:
	print("Superiores")
-- EXECUTION TIME:
0.151715
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Superiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Superiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 16:45:00) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
if x > 0:
	print("Superiores")
-- EXECUTION TIME:
0.092124
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1646/2730/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 16:45:00) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
if x > 0:
	print("Superiores")
-- EXECUTION TIME:
0.188015
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Superiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Inferiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 16:45:01) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
if x > 0:
	print("Superiores")
-- EXECUTION TIME:
0.110756
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Superiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Superiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 16:45:01) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
if x > 0:
	print("Superiores")
-- EXECUTION TIME:
0.150083
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Inferiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:

-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Inferiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 16:45:02) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
if x > 0:
	print("Superiores")
-- EXECUTION TIME:
0.174699
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Superiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Superiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 16:45:02) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
if x > 0:
	print("Superiores")
-- EXECUTION TIME:
0.185735
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Superiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Inferiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 16:45:02) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
if x > 0:
	print("Superiores")
-- EXECUTION TIME:
0.161472
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Superiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:

-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Superiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 16:45:02) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
if x > 0:
	print("Superiores")
-- EXECUTION TIME:
0.228471
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Superiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Inferiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Inferiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 16:45:02) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
if x > 0:
	print("Superiores")
-- EXECUTION TIME:
0.344214
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Superiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:

-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Superiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 16:45:03) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
if x > 0:
	print("Superiores")
-- EXECUTION TIME:
0.122141
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1646/2730/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 16:45:03) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
if x > 0:
	print("Superiores")
-- EXECUTION TIME:
0.136896
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1646/2730/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 16:45:03) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
if x > 0:
	print("Superiores")
-- EXECUTION TIME:
0.313741
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Superiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Inferiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 16:45:03) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
if x > 0:
	print("Superiores")
-- EXECUTION TIME:
0.327222
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1646/2730/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 16:45:04) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
if x > 0:
	print("Superiores")
-- EXECUTION TIME:
0.28069
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1646/2730/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 16:45:04) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
if x > 0:
	print("Superiores")
-- EXECUTION TIME:
0.477878
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1646/2730/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 16:45:04) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
if x > 0:
	print("Superiores")
-- EXECUTION TIME:
0.498048
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1646/2730/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 16:45:05) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
if x > 0:
	print("Superiores")
-- EXECUTION TIME:
0.163839
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1646/2730/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 16:45:05) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
if x > 0:
	print("Superiores")
-- EXECUTION TIME:
0.219316
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Superiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Inferiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 16:45:05) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
if x > 0:
	print("Superiores")
-- EXECUTION TIME:
0.269408
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Superiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Superiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:
Inferiores
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-19 16:45:05) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if x < 0:
	print("Inferiores")
if x > 0:
	print("Superiores")
-- EXECUTION TIME:
0.30226
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Inferiores
---- user output:
Superiores
-- TEST CASE 2:
---- input:
0.1
0.1
---- correct output:
Superiores
---- user output:
Inferiores
-- TEST CASE 3:
---- input:
-4.5
2.2
---- correct output:
Superiores
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
